show central frequency on spectrogram

--- a/ssam/ssam.ipynb
+++ b/ssam/ssam.ipynb
@@ -36,15 +36,32 @@
     "import numpy as np\n",
     "from numpy.fft import rfft\n",
     "from obspy.core import read, Trace, Stream, UTCDateTime\n",
-    "from obspy.signal.invsim import cosine_taper\n",
+    "# from obspy.signal.invsim import cosine_taper\n",
+    "import obspy.signal\n",
     "from obspy.clients.fdsn import Client\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
     "import matplotlib.dates as dates\n",
     "from datetime import datetime, timedelta\n",
     "import pandas as pd\n",
+    "import scipy as sp\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predominantFrequency(data, fs):\n",
+    "    nfft = obspy.signal.util.next_pow_2(len(data))\n",
+    "    frequency = np.linspace(0, fs, nfft + 1)\n",
+    "    data_f = sp.fftpack.fft(data, nfft)\n",
+    "    data_fas = np.abs(data_f[0:nfft // 2])\n",
+    "    predom_freq = frequency[np.argmax(data_fas)]\n",
+    "    return predom_freq"
    ]
   },
   {
@@ -108,8 +125,8 @@
    "outputs": [],
    "source": [
     "date1 = '2020-07-04' #(first date to plot)\n",
-    "date2 = '2020-07-05' #(last date to plot)\n",
-    "site = 'WIZ.10.HHZ.NZ'\n",
+    "date2 = '2020-07-04' #(last date to plot)\n",
+    "site = 'WSRZ.10.HHZ.NZ'\n",
     "normalise = 'log'\n",
     "#normalise = 'lin'"
    ]
@@ -177,7 +194,9 @@
    "source": [
     "#create an empty 2d array of the required size and fill with zeros\n",
     "nwin = int(ndays*24*(3600/180)) #number windows in ndays hours\n",
-    "z = np.zeros((249,nwin))"
+    "z = np.zeros((249,nwin))\n",
+    "#and for predominant frequency\n",
+    "pf = np.zeros(nwin)"
    ]
   },
   {
@@ -198,11 +217,13 @@
     "    #only proceed if have complete data for this time window\n",
     "    if (len(tr10) >= win * 50):\n",
     "     tr10.detrend(type='demean')\n",
-    "     npts, nyq = tr10.stats.npts, int(tr10.stats.sampling_rate/2.0)\n",
+    "     npts, nyq, fs = tr10.stats.npts, int(tr10.stats.sampling_rate/2.0), tr10.stats.sampling_rate\n",
     "     #cosine taper\n",
     "     tap = cosine_taper(npts,0.1)\n",
     "     #calculate fft\n",
     "     data = tr10.data * 1e9 #convert from m/s to nm/s\n",
+    "     predfreq = predominantFrequency(data, fs)\n",
+    "     pf[col] = predfreq\n",
     "     trf = rfft(data*tap)\n",
     "     a = abs(trf[1:])\n",
     "     #calculate frequencies for fft\n",
@@ -230,6 +251,9 @@
     "dstart = datetime.strptime(date1, '%Y-%m-%d')\n",
     "dend = datetime.strptime(date2, '%Y-%m-%d') + timedelta(days=1)\n",
     "x = pd.date_range(start=dstart, end=dend, freq='3min')\n",
+    "\n",
+    "#for predominant frequency\n",
+    "xpf = x[:-1]\n",
     "\n",
     "#array for hourly x-axis ticks/grid\n",
     "xticks = pd.date_range(start=dstart, end=dend, freq='3H')\n",
@@ -265,6 +289,9 @@
     "    ax.pcolormesh(x, f, z, cmap='magma', norm=matplotlib.colors.Normalize(vmin=vmin, vmax=vmax))\n",
     "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map: Linear'\n",
     "\n",
+    "#circle at each predominant frequency\n",
+    "ax.plot(xpf, pf, marker='o', markersize=3, linestyle='None', color='white')\n",
+    "    \n",
     "fmt = dates.DateFormatter('%m-%d/%H')\n",
     "ax.xaxis.set_major_formatter(fmt)\n",
     "ax.set_ylim(f.min(), f.max())\n",
