--- a/ssam/ssam.ipynb
+++ b/ssam/ssam.ipynb
@@ -21,7 +21,12 @@
     "* Frequency resolution is 0.1 Hz. Each FFT is resampled to achieve this.\n",
     "* Sensitivity is removed from the raw data to give m/s, then converted to nm/s.\n",
     "* Data gaps are interpolated as zeros, so time with a data gap gives zero FFT, hence a blank space in the spectrogram. \n",
-    "* Colour map is bounded by 10 and 5e6. This is fixed so that all spectrogram have the same colour map."
+    "* Colour map is bounded by 10 and 5e6. This is fixed so that all spectrogram have the same colour map.\n",
+    "* The predominant frequency (frequency with the highest spectral amplitude) is calculated for each FFT, for both unfiltered and high-pass filtered data windows.\n",
+    " * This is to help see the spectral peak and any variations, as this can be difficult, especially with broad-band signals.\n",
+    " * Unfiltered predominant frequency often highlights the frequency of micro-seisms (0.15-0.2 Hz).\n",
+    " * Filtered predominant frequency (suggested high-pass filter value 0.7 Hz) picks out the peak in frequencies of more typical tremor and other signals.\n",
+    " * Filtered predominant frequecy is plotted first, with black colour and a low alpha, and unfiltered next, with white and a full alpha. "
    ]
   },
   {
@@ -36,7 +41,7 @@
     "import numpy as np\n",
     "from numpy.fft import rfft\n",
     "from obspy.core import read, Trace, Stream, UTCDateTime\n",
-    "# from obspy.signal.invsim import cosine_taper\n",
+    "from obspy.signal.invsim import cosine_taper\n",
     "import obspy.signal\n",
     "from obspy.clients.fdsn import Client\n",
     "import matplotlib.pyplot as plt\n",
@@ -73,7 +78,9 @@
     "#data window (seconds), should be a finite fraction of an hour\n",
     "win = 180\n",
     "#frequency interval (hertz)\n",
-    "fint = 0.1"
+    "fint = 0.1\n",
+    "#highpass filter frequency\n",
+    "hp = 0.7"
    ]
   },
   {
@@ -124,9 +131,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date1 = '2020-07-04' #(first date to plot)\n",
-    "date2 = '2020-07-04' #(last date to plot)\n",
-    "site = 'WSRZ.10.HHZ.NZ'\n",
+    "date1 = '2019-12-08' #(first date to plot)\n",
+    "date2 = '2019-12-09' #(last date to plot, inclusive)\n",
+    "site = 'WIZ.10.HHZ.NZ'\n",
     "normalise = 'log'\n",
     "#normalise = 'lin'"
    ]
@@ -153,6 +160,7 @@
     "#get data stream\n",
     "dayswave(date1, date2, net, sta, loc, cmp)\n",
     "st.remove_sensitivity()\n",
+    "print (st)\n",
     "\n",
     "#merge streams, fill gaps with zeros\n",
     "st.merge(fill_value = 0.0)\n",
@@ -196,7 +204,8 @@
     "nwin = int(ndays*24*(3600/180)) #number windows in ndays hours\n",
     "z = np.zeros((249,nwin))\n",
     "#and for predominant frequency\n",
-    "pf = np.zeros(nwin)"
+    "pf = np.zeros(nwin)\n",
+    "pff = np.zeros(nwin)"
    ]
   },
   {
@@ -216,23 +225,28 @@
     "    tr10 = tr.slice(t, t + win)\n",
     "    #only proceed if have complete data for this time window\n",
     "    if (len(tr10) >= win * 50):\n",
-    "     tr10.detrend(type='demean')\n",
-    "     npts, nyq, fs = tr10.stats.npts, int(tr10.stats.sampling_rate/2.0), tr10.stats.sampling_rate\n",
-    "     #cosine taper\n",
-    "     tap = cosine_taper(npts,0.1)\n",
-    "     #calculate fft\n",
-    "     data = tr10.data * 1e9 #convert from m/s to nm/s\n",
-    "     predfreq = predominantFrequency(data, fs)\n",
-    "     pf[col] = predfreq\n",
-    "     trf = rfft(data*tap)\n",
-    "     a = abs(trf[1:])\n",
-    "     #calculate frequencies for fft\n",
-    "     freq = np.linspace(0,nyq,int(npts/2))\n",
-    "     #interpolate to 0.1 Hz (lower resolution)\n",
-    "     f = np.arange(0.1,nyq,0.1) #0.1 Hz frequencies\n",
-    "     da = np.interp(f, freq, a)\n",
-    "     #fill column with spectral data\n",
-    "     z[:,col] = da\n",
+    "         tr10.detrend(type='demean')\n",
+    "         npts, nyq, fs = tr10.stats.npts, int(tr10.stats.sampling_rate/2.0), tr10.stats.sampling_rate\n",
+    "         #cosine taper\n",
+    "         tap = cosine_taper(npts,0.1)\n",
+    "         #predominant frequency on 'raw' data\n",
+    "         predfreq = predominantFrequency(tr10.data, fs)\n",
+    "         pf[col] = predfreq\n",
+    "         #predominant frequency on highpass filtered data\n",
+    "         flt = tr10.filter('highpass', freq=hp, corners=2, zerophase=True)\n",
+    "         predfreq = predominantFrequency(flt.data, fs)\n",
+    "         pff[col] = predfreq\n",
+    "         #calculate fft\n",
+    "         data = tr10.data * 1e9 #convert from m/s to nm/s\n",
+    "         trf = rfft(data*tap)\n",
+    "         a = abs(trf[1:])\n",
+    "         #calculate frequencies for fft\n",
+    "         freq = np.linspace(0,nyq,int(npts/2))\n",
+    "         #interpolate to 0.1 Hz (lower resolution)\n",
+    "         f = np.arange(0.1,nyq,0.1) #0.1 Hz frequencies\n",
+    "         da = np.interp(f, freq, a)\n",
+    "         #fill column with spectral data\n",
+    "         z[:,col] = da\n",
     "    \n",
     "    #next window\n",
     "    col += 1\n",
@@ -290,7 +304,8 @@
     "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map: Linear'\n",
     "\n",
     "#circle at each predominant frequency\n",
-    "ax.plot(xpf, pf, marker='o', markersize=3, linestyle='None', color='white')\n",
+    "ax.plot(xpf, pff, marker='o', markersize=3, linestyle='None', color='black', alpha=0.3, label='predominant frequency hp '+str(hp)+' Hz') #filtered\n",
+    "ax.plot(xpf, pf, marker='o', markersize=3, linestyle='None', color='white', label='true predominant frequency') #'raw', unfiltered, often pick out micro-seism\n",
     "    \n",
     "fmt = dates.DateFormatter('%m-%d/%H')\n",
     "ax.xaxis.set_major_formatter(fmt)\n",
@@ -309,6 +324,7 @@
     "    suptitle = sta+'.'+loc+'-'+cmp+'.'+net+', '+date1+' to '+date2\n",
     "plt.suptitle(suptitle, fontsize=20)\n",
     "plt.title(title, fontsize=12)\n",
+    "plt.legend(loc='best')\n",
     "plt.savefig('ssam.png', dpi=200)"
    ]
   }
