change scatter plot transform, reinstate OSM basemap

--- a/mercury/rotokawa_annual_report.ipynb
+++ b/mercury/rotokawa_annual_report.ipynb
@@ -210,16 +210,16 @@
    "source": [
     "start = '2004-01-01T00:00:00'\n",
     "mercstart = '2008-07-01'\n",
-    "thisrpt = '2018-07-01T00:00:00'\n",
-    "end = '2019-07-01T00:00:00'\n",
+    "thisrpt = '2019-07-01T00:00:00'\n",
+    "end = '2020-07-01T00:00:00'\n",
     "\n",
     "#previous report period\n",
-    "lastrpt = '2017-07-01T00:00:00'\n",
-    "lastend = '2018-07-01T00:00:00'\n",
+    "lastrpt = '2018-07-01T00:00:00'\n",
+    "lastend = '2019-07-01T00:00:00'\n",
     "\n",
     "#report period before that\n",
-    "last2rpt = '2016-07-01T00:00:00'\n",
-    "last2end = '2017-07-01T00:00:00'"
+    "last2rpt = '2017-07-01T00:00:00'\n",
+    "last2end = '2018-07-01T00:00:00'"
    ]
   },
   {
@@ -533,20 +533,22 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
+    "# imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 15)\n",
     "#ax.gridlines()\n",
     "\n",
     "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
-    "plt.scatter(hyprpt['longitude'], hyprpt['latitude'], color='red', marker='o', s=hyprpt['ml']**2, transform=ccrs.Geodetic())\n",
+    "# plt.scatter(hyprpt['longitude'], hyprpt['latitude'], color='red', marker='o', s=hyprpt['ml']**2, transform=ccrs.Geodetic())\n",
+    "plt.scatter(hyprpt['longitude'], hyprpt['latitude'], color='red', marker='o', s=hyprpt['ml']**2, transform=ccrs.PlateCarree())\n",
     "\n",
     "#plot wells\n",
     "names = ['lon', 'lat', 'name']\n",
     "wells = pd.read_csv('wells.dat', sep='\\s+', names=names)\n",
-    "plt.scatter(wells['lon'], wells['lat'], color='black', marker='s', s=5, transform=ccrs.Geodetic())\n",
+    "# plt.scatter(wells['lon'], wells['lat'], color='black', marker='s', s=5, transform=ccrs.Geodetic())\n",
+    "plt.scatter(wells['lon'], wells['lat'], color='black', marker='s', s=5, transform=ccrs.PlateCarree())\n",
     "#transform coordinate system so can plot text below symbol\n",
     "geodetic_transform = ccrs.Geodetic()._as_mpl_transform(ax)\n",
     "text_transform = offset_copy(geodetic_transform, units='dots', y=-15)\n",
@@ -716,9 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#magnitude vs time\n",
@@ -937,14 +937,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
+    "# imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([slonmin, slonmax, slatmin, slatmax])\n",
     "ax.add_image(imagery, 15)\n",
@@ -969,7 +967,7 @@
     "    plt.text(row['lon'], row['lat'], row['name'], verticalalignment='top', horizontalalignment='center', transform=text_transform, fontsize=4)\n",
     "\n",
     "scale_bar(ax, ccrs.Mercator(), 1)\n",
-    " \n",
+    "\n",
     "plt.savefig('mercury_station_map.png', dpi=400)"
    ]
   },
@@ -1032,8 +1030,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
+    "# imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([wlonmin, wlonmax, wlatmin, wlatmax])\n",
     "#ax.add_image(imagery, 15)\n",
@@ -1165,9 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eqs[' magnitude'][(eqs['dist']<=5)&(eqs.index>=thisrpt)&(eqs.index<=end)].describe()"
@@ -1192,9 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eqs[' magnitude'][(eqs['dist']<=5)&(eqs.index>=lastrpt)&(eqs.index<=lastend)].describe()"
@@ -1338,9 +1332,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
