OSM basemap, depth labels, minor tweaks

--- a/taranaki_report/taranaki_trc_report.ipynb
+++ b/taranaki_report/taranaki_trc_report.ipynb
@@ -53,32 +53,7 @@
     "from cartopy.io.img_tiles import OSM\n",
     "from cartopy.io.img_tiles import Stamen\n",
     "\n",
-    "import warnings; warnings.simplefilter('ignore')\n",
-    "\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#notebook uses full screen width\n",
-    "from IPython.core.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%javascript\n",
-    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
-    "    return false;\n",
-    "}"
+    "import warnings; warnings.simplefilter('ignore')"
    ]
   },
   {
@@ -102,8 +77,8 @@
    "outputs": [],
    "source": [
     "startall = '1994-01-01'\n",
-    "startyear = '2018-07-01'\n",
-    "end = '2019-07-01'"
+    "startyear = '2019-07-01'\n",
+    "end = '2020-07-01'"
    ]
   },
   {
@@ -215,8 +190,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
+    "# imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
@@ -228,14 +203,16 @@
     "plt.plot(faults['longitude'], faults['latitude'], color='black', transform=ccrs.Geodetic())\n",
     "\n",
     "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
-    "plt.scatter(eqsyr50['longitude'], eqsyr50[' latitude'], color='red', marker='o', s=eqsyr50[' magnitude']**2, transform=ccrs.Geodetic())\n",
-    "plt.scatter(eqsyrdp['longitude'], eqsyrdp[' latitude'], facecolors='None', edgecolors='black', linewidth=0.5, marker='o', s=eqsyrdp[' magnitude']**2, transform=ccrs.Geodetic())\n",
+    "plt.scatter(eqsyr50['longitude'], eqsyr50[' latitude'], color='red', marker='o', s=eqsyr50[' magnitude']**2, transform=ccrs.PlateCarree(), label='<50')\n",
+    "plt.scatter(eqsyrdp['longitude'], eqsyrdp[' latitude'], facecolors='None', edgecolors='black', linewidth=0.5, marker='o', s=eqsyrdp[' magnitude']**2, transform=ccrs.PlateCarree(), label=r'$\\geq$'+'50')\n",
     "\n",
     "#section position\n",
     "plt.plot(boxlon, boxlat, color='black', linestyle='--', marker='None', transform=ccrs.Geodetic())\n",
     "\n",
+    "plt.legend(loc='best', handletextpad=0, prop={'size': 6})\n",
+    "\n",
     "#scale_bar(ax, ccrs.Mercator(), 20)\n",
-    "plt.tight_layout()\n",
+    "# plt.tight_layout()\n",
     "plt.savefig('year_map.png', dpi=400)"
    ]
   },
@@ -263,8 +240,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
+    "# imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
@@ -273,7 +250,7 @@
     "plt.plot(faults['longitude'], faults['latitude'], color='black', transform=ccrs.Geodetic())\n",
     "\n",
     "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
-    "plt.scatter(yrm3['longitude'], yrm3[' latitude'], color='red', marker='o', s=eqsyr50[' magnitude']**2, transform=ccrs.Geodetic())"
+    "plt.scatter(yrm3['longitude'], yrm3[' latitude'], color='red', marker='o', s=yrm3[' magnitude']**2, transform=ccrs.PlateCarree())"
    ]
   },
   {
@@ -306,14 +283,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
+    "# imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
@@ -323,10 +298,12 @@
     "plt.plot(faults['longitude'], faults['latitude'], color='black', transform=ccrs.Geodetic())\n",
     "\n",
     "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
-    "plt.scatter(eqsall50['longitude'], eqsall50[' latitude'], color='red', linewidths=0, marker='o', alpha=0.25, s=eqsyr50[' magnitude']**2, transform=ccrs.Geodetic())\n",
-    "plt.scatter(eqsalldp['longitude'], eqsalldp[' latitude'], facecolors='None', edgecolors='black', linewidth=0.5, marker='o', s=eqsyrdp[' magnitude']**2, transform=ccrs.Geodetic())\n",
+    "plt.scatter(eqsall50['longitude'], eqsall50[' latitude'], color='red', linewidths=0, marker='o', alpha=0.25, s=eqsall50[' magnitude']**2, transform=ccrs.PlateCarree(), label='<50')\n",
+    "plt.scatter(eqsalldp['longitude'], eqsalldp[' latitude'], facecolors='None', edgecolors='black', linewidth=0.5, marker='o', s=eqsalldp[' magnitude']**2, transform=ccrs.PlateCarree(), label=r'$\\geq$'+'50')\n",
     "\n",
-    "plt.tight_layout() \n",
+    "plt.legend(loc='best', handletextpad=0, prop={'size': 6})\n",
+    "\n",
+    "# plt.tight_layout() \n",
     "plt.savefig('all_map.png', dpi=400)"
    ]
   },
@@ -351,14 +328,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
+    "# imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
@@ -368,10 +343,12 @@
     "plt.plot(faults['longitude'], faults['latitude'], color='black', transform=ccrs.Geodetic())\n",
     "\n",
     "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
-    "plt.scatter(eqsall5027['longitude'], eqsall5027[' latitude'], color='red', marker='o', s=eqsall5027[' magnitude']**2, transform=ccrs.Geodetic())\n",
-    "plt.scatter(eqsalldp27['longitude'], eqsalldp27[' latitude'], facecolors='None', edgecolors='black', linewidth=0.5, marker='o', s=eqsalldp27[' magnitude']**2, transform=ccrs.Geodetic())\n",
+    "plt.scatter(eqsall5027['longitude'], eqsall5027[' latitude'], color='red', marker='o', s=eqsall5027[' magnitude']**2, transform=ccrs.PlateCarree(), label='<50')\n",
+    "plt.scatter(eqsalldp27['longitude'], eqsalldp27[' latitude'], facecolors='None', edgecolors='black', linewidth=0.5, marker='o', s=eqsalldp27[' magnitude']**2, transform=ccrs.PlateCarree(), label=r'$\\geq$'+'50')\n",
     "\n",
-    "plt.tight_layout() \n",
+    "plt.legend(loc='best', handletextpad=0, prop={'size': 6}, framealpha=1)\n",
+    "\n",
+    "# plt.tight_layout() \n",
     "plt.savefig('all_2.7_map.png', dpi=400)"
    ]
   },
@@ -428,14 +405,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
+    "# imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([wlonmin, wlonmax, wlatmin, wlatmax])\n",
     "ax.add_image(imagery, 8)\n",
@@ -443,14 +418,16 @@
     "\n",
     "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
     "#plotting order so that shallow symbols overly deeper\n",
-    "plt.scatter(eqsw50['longitude'], eqsw50[' latitude'], color='black', marker='o', s=eqsw50[' magnitude']**2, transform=ccrs.Geodetic())\n",
-    "plt.scatter(eqsw30_50['longitude'], eqsw30_50[' latitude'], color='blue', marker='o', s=eqsw30_50[' magnitude']**2, transform=ccrs.Geodetic())\n",
-    "plt.scatter(eqsw20_30['longitude'], eqsw20_30[' latitude'], color='red', marker='o', s=eqsw20_30[' magnitude']**2, transform=ccrs.Geodetic())\n",
-    "plt.scatter(eqsw10_20['longitude'], eqsw10_20[' latitude'], color='green', marker='o', s=eqsw10_20[' magnitude']**2, transform=ccrs.Geodetic())\n",
-    "plt.scatter(eqsw10['longitude'], eqsw10[' latitude'], color='yellow', marker='o', s=eqsw10[' magnitude']**2, transform=ccrs.Geodetic())\n",
+    "plt.scatter(eqsw50['longitude'], eqsw50[' latitude'], color='black', marker='o', s=eqsw50[' magnitude']**2, transform=ccrs.PlateCarree(), label=r'$\\geq$'+'50')\n",
+    "plt.scatter(eqsw30_50['longitude'], eqsw30_50[' latitude'], color='blue', marker='o', s=eqsw30_50[' magnitude']**2, transform=ccrs.PlateCarree(), label='30-50')\n",
+    "plt.scatter(eqsw20_30['longitude'], eqsw20_30[' latitude'], color='red', marker='o', s=eqsw20_30[' magnitude']**2, transform=ccrs.PlateCarree(), label='20-30')\n",
+    "plt.scatter(eqsw10_20['longitude'], eqsw10_20[' latitude'], color='green', marker='o', s=eqsw10_20[' magnitude']**2, transform=ccrs.PlateCarree(), label='10-20')\n",
+    "plt.scatter(eqsw10['longitude'], eqsw10[' latitude'], color='yellow', marker='o', s=eqsw10[' magnitude']**2, transform=ccrs.PlateCarree(), label='<10')\n",
     "\n",
     "#main plot area\n",
     "plt.plot(mlon, mlat, color='black', linestyle='--', marker='None', transform=ccrs.Geodetic())\n",
+    "\n",
+    "plt.legend(loc='best', handletextpad=0)\n",
     "\n",
     "plt.tight_layout() \n",
     "plt.savefig('year_wide_map.png', dpi=400)"
@@ -482,8 +459,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
+    "# imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 8)\n",
@@ -525,7 +502,7 @@
     "\n",
     "mcount = eqs50m4.resample('1M', label='left', closed='left').count()\n",
     "ax1.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax1.bar(mcount.index, mcount.publicid, width = 1, color='blue', edgecolor='blue', align='edge', label='M>=4 earthquakes')\n",
+    "ax1.bar(mcount.index, mcount.publicid, width = 5, color='blue', edgecolor='blue', align='edge', label='M>=4 earthquakes')\n",
     "ax1.set_xlim([startall,end])\n",
     "ax1.legend(loc='upper left')\n",
     "#want integer ticks(grid), default for small y-range gives 0.5 spacing\n",
@@ -535,12 +512,12 @@
     "\n",
     "mcount = eqs50m3.resample('1M', label='left', closed='left').count()\n",
     "ax2.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax2.bar(mcount.index, mcount.publicid, width = 1, color='green', edgecolor='green', align='edge', label='M>=3 earthquakes')\n",
+    "ax2.bar(mcount.index, mcount.publicid, width = 5, color='green', edgecolor='green', align='edge', label='M>=3 earthquakes')\n",
     "\n",
     "ax2.legend(loc='upper left')\n",
     "mcount = eqs50.resample('1M', label='left', closed='left').count()\n",
     "ax3.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax3.bar(mcount.index, mcount.publicid, width = 1, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
+    "ax3.bar(mcount.index, mcount.publicid, width = 5, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
     "ax3.legend(loc='upper left')\n",
     "plt.tight_layout()\n",
     "fig.savefig('taranaki_monthly.png', dpi=200)"
@@ -677,9 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#hypocentres and topography on one plot, depth histogram on another\n",
@@ -702,7 +677,7 @@
     "#depth histogram\n",
     "plt.subplot2grid((3,11), (0,9), colspan=2, rowspan=3)\n",
     "plt.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "plt.hist(sect[' depth'], bins=[0,5,10,15,20,25,30,35,40,45], orientation='horizontal')\n",
+    "plt.hist(sect[' depth'], bins=[0,5,10,15,20,25,30,35,40,45], color='red', orientation='horizontal')\n",
     "plt.text(x=2, y=-4, s='B', verticalalignment='top', horizontalalignment='left', fontsize=14)\n",
     "plt.ylim([-5,50])\n",
     "plt.xlabel('Number of earthquakes')\n",
@@ -791,9 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#loop for each site\n",
@@ -939,9 +912,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
