--- a/ohaaki_report/ohaaki_annual_report.ipynb
+++ b/ohaaki_report/ohaaki_annual_report.ipynb
@@ -28,7 +28,6 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.io.img_tiles as cimgt\n",
     "from cartopy.io.img_tiles import OSM\n",
-    "from cartopy.io.img_tiles import Stamen\n",
     "\n",
     "import warnings; warnings.simplefilter('ignore')\n",
     "\n",
@@ -152,8 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "startyear = '2019-01-01T00:00:00'\n",
-    "endyear = '2020-01-01T00:00:00'\n",
+    "startyear = '2020-01-01T00:00:00'\n",
+    "endyear = '2021-01-01T00:00:00'\n",
     "\n",
     "#as well as annual data, show number of events since 2010\n",
     "startall = '2010-01-01T00:00:00'"
@@ -192,7 +191,7 @@
    },
    "outputs": [],
    "source": [
-    "eqs#.head()"
+    "eqs.head()"
    ]
   },
   {
@@ -219,27 +218,37 @@
    "outputs": [],
    "source": [
     "#plot map\n",
-    "fig = plt.figure(dpi=200)\n",
+    "fig = plt.figure()\n",
     "\n",
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
-    "ax.add_image(imagery, 13)\n",
+    "ax.add_image(imagery, 14)\n",
     "\n",
     "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
-    "plt.scatter(eqsyr['longitude'], eqsyr[' latitude'], color='red', marker='o', s=eqsyr[' magnitude']**2, transform=ccrs.Geodetic())\n",
+    "plt.scatter(eqsyr['longitude'], eqsyr[' latitude'], color='red', marker='o', s=eqsyr[' magnitude']**2, transform=ccrs.PlateCarree())\n",
     "\n",
-    "#power station text\n",
+    "#transform coordinate system so can plot text below symbol\n",
     "geodetic_transform = ccrs.Geodetic()._as_mpl_transform(ax)\n",
-    "text_transform = offset_copy(geodetic_transform, units='dots', y=0)\n",
+    "text_transform = offset_copy(geodetic_transform, units='dots')\n",
     "\n",
-    "plt.text(176.2938, -38.5276, 'OP', verticalalignment='center', horizontalalignment='center', color='black', transform=text_transform, fontsize=4)\n",
+    "#power station\n",
+    "plt.text(176.294, -38.528, 'OP', verticalalignment='center_baseline', color='black', horizontalalignment='center', transform=text_transform, fontsize=4)\n",
     "\n",
     "scale_bar(ax, ccrs.Mercator(), 2)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('ohaaki_map.png', dpi=200)"
+    "plt.savefig('ohaaki_map.png', facecolor='white', dpi=400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "convert ohaaki_map.png -trim +repage ohaaki_map.png"
    ]
   },
   {
@@ -274,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eqs['publicid'].resample('A', label='right', closed='left').count()"
+    "eqs[' latitude'].groupby([eqs.index.year]).agg('count')"
    ]
   }
  ],
@@ -294,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
