--- a/wairakei-tauhara_report/wairakei-tauhara_annual_report.ipynb
+++ b/wairakei-tauhara_report/wairakei-tauhara_annual_report.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%javascript\n",
-    "# IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
-    "#     return false;\n",
-    "# }"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,11 +28,10 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.io.img_tiles as cimgt\n",
     "from cartopy.io.img_tiles import OSM\n",
-    "from cartopy.io.img_tiles import Stamen\n",
     "\n",
     "import warnings; warnings.simplefilter('ignore')\n",
     "\n",
-    "# %matplotlib inline"
+    "%matplotlib inline"
    ]
   },
   {
@@ -131,8 +118,8 @@
    "outputs": [],
    "source": [
     "#notebook uses full screen width\n",
-    "# from IPython.core.display import display, HTML\n",
-    "# display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
    ]
   },
   {
@@ -164,8 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "startyear = '2019-01-01T00:00:00'\n",
-    "endyear = '2020-01-01T00:00:00'\n",
+    "startyear = '2020-01-01T00:00:00'\n",
+    "endyear = '2021-01-01T00:00:00'\n",
     "\n",
     "#as well as annual data, show number of events since 1996\n",
     "startall = '1996-01-01T00:00:00'"
@@ -239,22 +226,21 @@
    "outputs": [],
    "source": [
     "#plot map\n",
-    "fig = plt.figure(dpi=200)\n",
+    "fig = plt.figure()\n",
     "\n",
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
-    "ax.add_image(imagery, 10)\n",
+    "ax.add_image(imagery, 12)\n",
     "\n",
     "#seismographs\n",
     "names = ['lon', 'lat', 'code']\n",
     "seis = pd.read_csv('seis.dat', sep='\\s+', names=names)\n",
-    "plt.plot(seis['lon'], seis['lat'], color='blue', marker='^', markersize=4, linestyle='none', transform=ccrs.Geodetic())\n",
+    "plt.plot(seis['lon'], seis['lat'], color='blue', marker='^', markersize=4, linestyle='none', transform=ccrs.PlateCarree())\n",
     "#transform coordinate system so can plot text below symbol\n",
     "geodetic_transform = ccrs.Geodetic()._as_mpl_transform(ax)\n",
-    "text_transform = offset_copy(geodetic_transform, units='dots', y=-12)\n",
+    "text_transform = offset_copy(geodetic_transform, units='dots', y=-25)\n",
     "#text labels\n",
     "for index, row in seis.iterrows():\n",
     "    plt.text(row['lon'], row['lat'], row['code'], verticalalignment='top', horizontalalignment='center', transform=text_transform, fontsize=4)\n",
@@ -262,7 +248,7 @@
     "#power stations\n",
     "names = ['lon', 'lat', 'let']\n",
     "powst = pd.read_csv('powst.dat', sep='\\s+', names=names)\n",
-    "plt.plot(powst['lon'], powst['lat'], color='black', marker='s', alpha=0.8, markersize=4, markeredgewidth=0, linestyle='none', transform=ccrs.Geodetic())\n",
+    "plt.plot(powst['lon'], powst['lat'], color='black', marker='s', alpha=0.8, markersize=4, markeredgewidth=0, linestyle='none', transform=ccrs.PlateCarree())\n",
     "#transform coordinate system so can plot text below symbol\n",
     "geodetic_transform = ccrs.Geodetic()._as_mpl_transform(ax)\n",
     "text_transform = offset_copy(geodetic_transform, units='dots', y=0)\n",
@@ -273,18 +259,28 @@
     "#huka falls and 7 km radius round huka falls\n",
     "hukalon = 176.090\n",
     "hukalat = -38.6488\n",
-    "plt.plot(hukalon, hukalat, color='gray', marker='s', alpha=0.8, markersize=5, markeredgewidth=0, linestyle='none', transform=ccrs.Geodetic())\n",
+    "plt.plot(hukalon, hukalat, color='gray', marker='s', alpha=0.8, markersize=5, markeredgewidth=0, linestyle='none', transform=ccrs.PlateCarree())\n",
     "plt.text(hukalon, hukalat, 'HF', verticalalignment='center', horizontalalignment='center', color='black', transform=text_transform, fontsize=4)\n",
     "names = ['lon', 'lat']\n",
     "hfrad = pd.read_csv('hukafalls7km.lonlat', sep='\\s+', names=names)\n",
-    "plt.plot(hfrad['lon'], hfrad['lat'], color='black', alpha=0.5, linestyle='--', linewidth=0.5, transform=ccrs.Geodetic())\n",
+    "plt.plot(hfrad['lon'], hfrad['lat'], color='black', alpha=0.5, linestyle='--', linewidth=0.5, transform=ccrs.PlateCarree())\n",
     "\n",
     "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
-    "plt.scatter(eqsyr['longitude'], eqsyr[' latitude'], color='red', marker='o', s=eqsyr[' magnitude']**2, transform=ccrs.Geodetic())\n",
+    "plt.scatter(eqsyr['longitude'], eqsyr[' latitude'], color='red', marker='o', s=eqsyr[' magnitude']**2, transform=ccrs.PlateCarree())\n",
     "\n",
     "scale_bar(ax, ccrs.Mercator(), 2)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('wairakei-tauhara_map.png', dpi=200)"
+    "plt.savefig('wairakei-tauhara_map.png', facecolor='white', dpi=600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "convert wairakei-tauhara_map.png -trim +repage wairakei-tauhara_map.png"
    ]
   },
   {
@@ -307,7 +303,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#events M>=3 so can give numbers\n",
@@ -336,13 +334,12 @@
     "fig = plt.figure(dpi=100)\n",
     "\n",
     "#imagery\n",
-    "# imagery = OSM()\n",
-    "imagery = Stamen('terrain-background')\n",
+    "imagery = OSM()\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
     "\n",
-    "plt.scatter(eqsyr[eqsyr[' magnitude']>=3]['longitude'], eqsyr[eqsyr[' magnitude']>=3][' latitude'], color='red', marker='o', s=eqsyr[' magnitude']**2, transform=ccrs.Geodetic())"
+    "plt.scatter(eqsyr[eqsyr[' magnitude']>=3]['longitude'], eqsyr[eqsyr[' magnitude']>=3][' latitude'], color='red', marker='o', s=eqsyr[' magnitude']**2, transform=ccrs.PlateCarree())"
    ]
   },
   {
@@ -373,23 +370,23 @@
     "\n",
     "mcount = eqsm3.resample('1M', label='left', closed='left').count()\n",
     "ax1.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax1.bar(mcount.index, mcount.publicid,  color='blue', edgecolor='blue', align='edge', label='M>=3 earthquakes')\n",
+    "ax1.bar(mcount.index, mcount.publicid, width = 10, color='blue', edgecolor='blue', align='edge', label='M>=3 earthquakes')\n",
     "ax1.legend(loc='upper left')\n",
     "ax1.set_ylim([0,3])\n",
     "mcount = eqsm2.resample('1M', label='left', closed='left').count()\n",
     "ax2.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax2.bar(mcount.index, mcount.publicid, color='green', edgecolor='green', align='edge', label='M>=2 earthquakes')\n",
+    "ax2.bar(mcount.index, mcount.publicid, width = 10, color='green', edgecolor='green', align='edge', label='M>=2 earthquakes')\n",
     "ax2.legend(loc='upper left')\n",
-    "ax2.set_ylim([0,70])\n",
+    "ax2.set_ylim([0,65])\n",
     "mcount = eqs.resample('1M', label='left', closed='left').count()\n",
     "ax3.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax3.bar(mcount.index, mcount.publicid, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
+    "ax3.bar(mcount.index, mcount.publicid, width = 10, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
     "ax3.legend(loc='upper left')\n",
     "ax3.set_ylim([0,220])\n",
-    "ax3.set_xlim([startall,endyear])\n",
+    "# ax3.set_xlim([startall,endyear])\n",
     "#plt.autoscale(enable=True, axis='x', tight=True)#tight on x data limits\n",
     "plt.tight_layout()\n",
-    "fig.savefig('wairakei-tauhara_monthly.png', dpi=200)"
+    "fig.savefig('wairakei-tauhara_monthly.png', facecolor='white', dpi=200)"
    ]
   },
   {
@@ -461,23 +458,23 @@
     "\n",
     "mcount = eqshfm3.resample('1M', label='left', closed='left').count()\n",
     "ax1.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax1.bar(mcount.index, mcount.publicid, color='blue', edgecolor='blue', align='edge', label='M>=3 earthquakes')\n",
+    "ax1.bar(mcount.index, mcount.publicid, width = 10, color='blue', edgecolor='blue', align='edge', label='M>=3 earthquakes')\n",
     "ax1.legend(loc='upper left')\n",
     "ax1.set_ylim([0,3])\n",
     "mcount = eqshfm2.resample('1M', label='left', closed='left').count()\n",
     "ax2.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax2.bar(mcount.index, mcount.publicid, color='green', edgecolor='green', align='edge', label='M>=2 earthquakes')\n",
+    "ax2.bar(mcount.index, mcount.publicid, width = 10, color='green', edgecolor='green', align='edge', label='M>=2 earthquakes')\n",
     "ax2.legend(loc='upper left')\n",
-    "ax2.set_ylim([0,70])\n",
+    "ax2.set_ylim([0,65])\n",
     "mcount = eqshf.resample('1M', label='left', closed='left').count()\n",
     "ax3.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax3.bar(mcount.index, mcount.publicid, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
+    "ax3.bar(mcount.index, mcount.publicid, width = 10, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
     "ax3.legend(loc='upper left')\n",
     "ax3.set_ylim([0,220])\n",
-    "ax3.set_xlim([startall,endyear])\n",
+    "# ax3.set_xlim([startall,endyear])\n",
     "#plt.autoscale(enable=True, axis='x', tight=True)#tight on x data limits\n",
     "plt.tight_layout()\n",
-    "fig.savefig('wairakei-tauhara_monthly-hukafalls.png', dpi=200)"
+    "fig.savefig('wairakei-tauhara_monthly-hukafalls.png', facecolor='white', dpi=200)"
    ]
   }
  ],
@@ -497,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
