--- a/ssam/ssam.ipynb
+++ b/ssam/ssam.ipynb
@@ -131,9 +131,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date1 = '2019-12-08' #(first date to plot)\n",
-    "date2 = '2019-12-09' #(last date to plot, inclusive)\n",
-    "site = 'WIZ.10.HHZ.NZ'\n",
+    "date1 = '2022-03-27' #(first date to plot)\n",
+    "date2 = '2022-03-27' #(last date to plot, inclusive)\n",
+    "site = 'MAVZ.10.HHZ.NZ'\n",
     "normalise = 'log'\n",
     "#normalise = 'lin'"
    ]
@@ -264,10 +264,7 @@
     "#array for x-axis values\n",
     "dstart = datetime.strptime(date1, '%Y-%m-%d')\n",
     "dend = datetime.strptime(date2, '%Y-%m-%d') + timedelta(days=1)\n",
-    "x = pd.date_range(start=dstart, end=dend, freq='3min')\n",
-    "\n",
-    "#for predominant frequency\n",
-    "xpf = x[:-1]\n",
+    "x = pd.date_range(start=dstart, end=dend, freq='3min', inclusive='left')\n",
     "\n",
     "#array for hourly x-axis ticks/grid\n",
     "xticks = pd.date_range(start=dstart, end=dend, freq='3H')\n",
@@ -304,8 +301,8 @@
     "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map: Linear'\n",
     "\n",
     "#circle at each predominant frequency\n",
-    "ax.plot(xpf, pff, marker='o', markersize=3, linestyle='None', color='black', alpha=0.3, label='predominant frequency hp '+str(hp)+' Hz') #filtered\n",
-    "ax.plot(xpf, pf, marker='o', markersize=3, linestyle='None', color='white', label='true predominant frequency') #'raw', unfiltered, often pick out micro-seism\n",
+    "ax.plot(x, pff, marker='o', markersize=3, linestyle='None', color='black', alpha=0.3, label='predominant frequency hp '+str(hp)+' Hz') #filtered\n",
+    "ax.plot(x, pf, marker='o', markersize=3, linestyle='None', color='white', label='true predominant frequency') #'raw', unfiltered, often pick out micro-seism\n",
     "    \n",
     "fmt = dates.DateFormatter('%m-%d/%H')\n",
     "ax.xaxis.set_major_formatter(fmt)\n",
@@ -313,27 +310,29 @@
     "ax.set_ylabel('Frequency (Hz)', fontsize=12)\n",
     "ax.set_xticks(xticks)\n",
     "ax.set_xticklabels(xlabels, rotation=45, horizontalalignment='right')\n",
-    "ax.grid(b=True, which='major', color='dimgray', linestyle='--', linewidth=0.75)\n",
-    "ax.grid(b=True, which='minor', color='gray', linestyle='--', axis='y')\n",
+    "ax.grid(visible=True, which='major', color='dimgray', linestyle='--', linewidth=0.75)\n",
+    "ax.grid(visible=True, which='minor', color='gray', linestyle='--', axis='y')\n",
     "plt.minorticks_on()\n",
     "\n",
     "#titles\n",
     "if (date2 == date1):\n",
     "    suptitle = sta+'.'+loc+'-'+cmp+'.'+net+', '+date1\n",
+    "    filetitle = sta+'.'+loc+'-'+cmp+'.'+net+'_'+date1\n",
     "else:\n",
     "    suptitle = sta+'.'+loc+'-'+cmp+'.'+net+', '+date1+' to '+date2\n",
+    "    filetitle = sta+'.'+loc+'-'+cmp+'.'+net+'_'+date1+'_'+date2\n",
     "plt.suptitle(suptitle, fontsize=20)\n",
     "plt.title(title, fontsize=12)\n",
     "plt.legend(loc='best')\n",
-    "plt.savefig('ssam.png', dpi=200)"
+    "plt.savefig('ssam_'+filetitle+'.png', dpi=200, facecolor='white')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "general",
    "language": "python",
-   "name": "python3"
+   "name": "general"
   },
   "language_info": {
    "codemirror_mode": {
@@ -345,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
