log and lin viz

--- a/ssam/ssam.ipynb
+++ b/ssam/ssam.ipynb
@@ -49,9 +49,7 @@
     "import matplotlib.dates as dates\n",
     "from datetime import datetime, timedelta\n",
     "import pandas as pd\n",
-    "import scipy as sp\n",
-    "\n",
-    "%matplotlib inline"
+    "import scipy as sp"
    ]
   },
   {
@@ -80,7 +78,10 @@
     "#frequency interval (hertz)\n",
     "fint = 0.1\n",
     "#highpass filter frequency\n",
-    "hp = 0.7"
+    "hp = 0.7\n",
+    "\n",
+    "#don't show full frequency range, but just up tp 10 Hz\n",
+    "fmax = 10"
    ]
   },
   {
@@ -131,11 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date1 = '2022-03-27' #(first date to plot)\n",
-    "date2 = '2022-03-27' #(last date to plot, inclusive)\n",
-    "site = 'MAVZ.10.HHZ.NZ'\n",
-    "normalise = 'log'\n",
-    "#normalise = 'lin'"
+    "date1 = '2022-04-26' #(first date to plot)\n",
+    "date2 = '2022-04-26' #(last date to plot, inclusive)\n",
+    "site = 'MAVZ.10.HHZ.NZ'"
    ]
   },
   {
@@ -281,8 +280,18 @@
    "source": [
     "#boundaries of cmap, nm/s\n",
     "#this ensures all spectrograms use the same colour map\n",
-    "vmin = 10\n",
-    "vmax = 5e6"
+    "vmin = 1e2\n",
+    "vmax = 1e6\n",
+    "\n",
+    "normalise = 'log'\n",
+    "cmap = 'magma'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### log normalise"
    ]
   },
   {
@@ -294,11 +303,11 @@
     "fig,ax = plt.subplots(figsize=(ndays*24,10))\n",
     "\n",
     "if (normalise == 'log'):\n",
-    "    ax.pcolormesh(x, f, z, cmap='magma', norm=matplotlib.colors.LogNorm(vmin=vmin, vmax=vmax))\n",
-    "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map: LogNorm'\n",
+    "    ax.pcolormesh(x, f, z, cmap=cmap, norm=matplotlib.colors.LogNorm(vmin=vmin, vmax=vmax))\n",
+    "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map:'+cmap+', Normalise: LogNorm, Range: '+str(int(vmin))+' - '+str(int(vmax))\n",
     "if (normalise == 'lin')    :\n",
-    "    ax.pcolormesh(x, f, z, cmap='magma', norm=matplotlib.colors.Normalize(vmin=vmin, vmax=vmax))\n",
-    "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map: Linear'\n",
+    "    ax.pcolormesh(x, f, z, cmap=cmap, norm=matplotlib.colors.Normalize(vmin=vmin, vmax=vmax))\n",
+    "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map:'+cmap+', Normalise: Linear, Range: '+str(int(vmin))+' - '+str(int(vmax))\n",
     "\n",
     "#circle at each predominant frequency\n",
     "ax.plot(x, pff, marker='o', markersize=3, linestyle='None', color='black', alpha=0.3, label='predominant frequency hp '+str(hp)+' Hz') #filtered\n",
@@ -306,7 +315,7 @@
     "    \n",
     "fmt = dates.DateFormatter('%m-%d/%H')\n",
     "ax.xaxis.set_major_formatter(fmt)\n",
-    "ax.set_ylim(f.min(), f.max())\n",
+    "ax.set_ylim(f.min(), fmax) #f.max())\n",
     "ax.set_ylabel('Frequency (Hz)', fontsize=12)\n",
     "ax.set_xticks(xticks)\n",
     "ax.set_xticklabels(xlabels, rotation=45, horizontalalignment='right')\n",
@@ -317,13 +326,75 @@
     "#titles\n",
     "if (date2 == date1):\n",
     "    suptitle = sta+'.'+loc+'-'+cmp+'.'+net+', '+date1\n",
-    "    filetitle = sta+'.'+loc+'-'+cmp+'.'+net+'_'+date1\n",
+    "    filetitle = sta+'.'+loc+'-'+cmp+'.'+net+'_'+normalise+'_'+cmap+'_'+date1\n",
     "else:\n",
     "    suptitle = sta+'.'+loc+'-'+cmp+'.'+net+', '+date1+' to '+date2\n",
-    "    filetitle = sta+'.'+loc+'-'+cmp+'.'+net+'_'+date1+'_'+date2\n",
+    "    filetitle = sta+'.'+loc+'-'+cmp+'.'+net+'_'+normalise+'_'+cmap+'_'+date1+'_'+date2\n",
+    "\n",
     "plt.suptitle(suptitle, fontsize=20)\n",
     "plt.title(title, fontsize=12)\n",
     "plt.legend(loc='best')\n",
+    "plt.savefig('ssam_'+filetitle+'.png', dpi=200, facecolor='white')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### linear normalise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalise = 'lin'\n",
+    "cmap = 'binary'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots(figsize=(ndays*24,10))\n",
+    "\n",
+    "if (normalise == 'log'):\n",
+    "    ax.pcolormesh(x, f, z, cmap=cmap, norm=matplotlib.colors.LogNorm(vmin=vmin, vmax=vmax))\n",
+    "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map:'+cmap+', Normalise: LogNorm, Range: '+str(int(vmin))+' - '+str(int(vmax))\n",
+    "if (normalise == 'lin')    :\n",
+    "    ax.pcolormesh(x, f, z, cmap=cmap, norm=matplotlib.colors.Normalize(vmin=vmin, vmax=vmax))\n",
+    "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map:'+cmap+', Normalise: Linear, Range: '+str(int(vmin))+' - '+str(int(vmax))\n",
+    "\n",
+    "#circle at each predominant frequency\n",
+    "ax.plot(x, pff, marker='o', markersize=3, linestyle='None', color='goldenrod', alpha=0.3, label='predominant frequency hp '+str(hp)+' Hz') #filtered\n",
+    "ax.plot(x, pf, marker='o', markersize=3, linestyle='None', color='darkorange', label='true predominant frequency') #'raw', unfiltered, often pick out micro-seism\n",
+    "    \n",
+    "fmt = dates.DateFormatter('%m-%d/%H')\n",
+    "ax.xaxis.set_major_formatter(fmt)\n",
+    "ax.set_ylim(f.min(), fmax) #f.max())\n",
+    "ax.set_ylabel('Frequency (Hz)', fontsize=12)\n",
+    "ax.set_xticks(xticks)\n",
+    "ax.set_xticklabels(xlabels, rotation=45, horizontalalignment='right')\n",
+    "ax.grid(visible=True, which='major', color='dimgray', linestyle='--', linewidth=0.75)\n",
+    "ax.grid(visible=True, which='minor', color='gray', linestyle='--', axis='y')\n",
+    "plt.minorticks_on()\n",
+    "\n",
+    "#titles\n",
+    "if (date2 == date1):\n",
+    "    suptitle = sta+'.'+loc+'-'+cmp+'.'+net+', '+date1\n",
+    "    filetitle = sta+'.'+loc+'-'+cmp+'.'+net+'_'+normalise+'_'+cmap+'_'+date1\n",
+    "else:\n",
+    "    suptitle = sta+'.'+loc+'-'+cmp+'.'+net+', '+date1+' to '+date2\n",
+    "    filetitle = sta+'.'+loc+'-'+cmp+'.'+net+'_'+normalise+'_'+cmap+'_'+date1+'_'+date2\n",
+    "\n",
+    "plt.suptitle(suptitle, fontsize=20)\n",
+    "plt.title(title, fontsize=12)\n",
+    "\n",
+    "plt.legend(loc='best', facecolor='silver')\n",
     "plt.savefig('ssam_'+filetitle+'.png', dpi=200, facecolor='white')"
    ]
   }
